cholera 0.7.0.9003
==================

- note parallelization vignette in cholera-package.Rd.


cholera 0.7.0.9002
==================

- set neighborhoodVoronoi(case.location = "address") as default.


cholera 0.7.0.9001
==================

- add isoLines().


cholera 0.7.0.9000
==================

- amend references: Paumgarten and Winter.


cholera 0.7.0
==================

# New Feature #

- support for parallel computation on Windows.

# Fixes #

- fix computation of core in neighborhoodWalking().
- fix nearestPump(metric = "euclidean", case.set = ("observed", "expected")).

# Function Changes #

- rename and amend simWalkingDistance() to simulateWalkingDistance().
- deprecate case.set argument in addNeighborhoodCases().
- add nearestPump(metric = "walking", case.set = "expected").
- amend expectedCount() for summary.walking().
- add unstackAuxiliaryFunctions.R

# Vignettes #

- add Parallelization vignette.


cholera 0.6.5
==================

# Fixes #

- fix plot.walking_path() timeposts.
- fix plot.walking_path(observed = FALSE).
- fix St James Workhouse for walkingPath(type = "cases").
- fix St James Workhouse for euclideanPath(type = "cases").
- fix city squares for plot.euclidean_path().
- fix computed time in nearestPump() and amend sim.walking.distance.

# New Data #

- add sim.walking.distance.

# Function Changes #

- add nearestPump(metric = "euclidean").
- add distance.unit argument to addWhitehead().
- add pch and point.size arguments to addNeighborhoodCases().
- add pos argument to addCase().
- add output argument to voronoiPolygons().
- add summary.euclidean(), summary.voronoi() and summary.walking().
- add multi.core argument to simWalkingDistance().
- add case.location to addEuclideanPath().
- add 'case' argument to pumpCase().
- amend travelingSalesman() argument in addSnow().
- amend print.euclidean(), print.voronoi() and print.walking().
- amend argument 'case' to 'data' in addKernelDensity().
- amend plot.walking() titles.